--- a/Journal/app/views/settings/settings.html
+++ b/Journal/app/views/settings/settings.html
@@ -19,13 +19,13 @@
 
 				<div class="tab-content padding-x-xl padding-y-xl">
 					<div role="tabpanel" class="tab-pane fade active in" id="panel-user">
-						<div art-settings-user></div>
+						<art-settings-user></art-settings-user>
 					</div>
 					<div role="tabpanel" class="tab-pane fade" id="panel-accounts">
 						<div art-settings-accounts></div>
 					</div>
 					<div role="tabpanel" class="tab-pane fade" id="panel-apps">
-						<div art-settings-apps></div>
+						<art-settings-apps></art-settings-apps>
 					</div>
 				</div>
 			</div>
