--- a/Journal/app/views/setup/setup.html
+++ b/Journal/app/views/setup/setup.html
@@ -1,9 +1,14 @@
 <div class="layout-root table-layout">
     <div class="row header">
         <div class="container padding-y-xl">
+            <h1>Willkommen!</h1>
+
+            <p>Vielen Dank, dass du Artivity verwendest. Bevor du starten kannst müssen wir noch ein paar Dinge einrichten.</p>
+            <!--
             <h1>Welcome!</h1>
 
-            <p>Thank you for downloading Artivity. Before you can begin using the app we need to setup your account:</p>
+            <p>Thank you for downloading Artivity. Before you can begin using the app we need to setup your user account:</p>
+            -->
         </div>
     </div>
     <div class="row expand">
@@ -16,10 +21,28 @@
                 <div class="container">
                     <div class="tab-content padding-y-xl">
                         <div role="tabpanel" class="tab-pane fade active in" id="panel-user">
-                            <div art-settings-user backup-enabled="false"></div>
+                            <p style="margin-bottom: 1.5em">Bitte wähle welchen Kontotyp du verwenden möchtest:</p>
+                            <uib-tabset>
+                                <uib-tab>
+                                    <uib-tab-heading>
+                                        <div style="padding: 0 15px">
+                                            <i class="zmdi zmdi-cloud-outline-alt"></i><label class="icn-label">Online</label>
+                                        </div>
+                                    </uib-tab-heading>
+                                    <arto-settings-user></arto-settings-user>
+                                </uib-tab>
+                                <uib-tab>
+                                    <uib-tab-heading>
+                                        <div style="padding: 0 15px">
+                                            <i class="zmdi zmdi-desktop-windows"></i><label class="icn-label">Lokal</label>
+                                        </div>
+                                    </uib-tab-heading>
+                                    <art-settings-user setup="true"></art-settings-user>
+                                </uib-tab>
+                            </uib-tabset>
                         </div>
                         <div role="tabpanel" class="tab-pane fade" id="panel-apps">
-                            <div art-settings-apps></div>
+                            <art-settings-apps setup="true"></art-settings-apps>
                         </div>
                     </div>
                 </div>
@@ -27,9 +50,10 @@
         </div>
     </div>
     <div class="row footer">
-        <div class="text-right padding-x-xl padding-y-xl">
-            <button class="btn btn-default btn-success" ng-show="t.canShowNext" ng-click="t.showNext()">Continue</button>
-            <button class="btn btn-default btn-success" ng-show="t.setupComplete" ng-click="t.submitAndReturn()">Done</button>
+        <div class="layout-container">
+            <div class="text-center padding-x-xl padding-y-xl">
+                <button class="btn btn-success" ng-show="t.setupComplete" ng-click="t.submitAndReturn()" style="min-width: 100px; text-align: center;">OK</button>
+            </div>
         </div>
     </div>
 </div>
