Added translations for some texts.

--- a/Journal/app/views/settings/settings.html
+++ b/Journal/app/views/settings/settings.html
@@ -5,7 +5,7 @@
 
 			<span class="txt txt-title" translate="SETTINGS.TITLE"></span>
 
-			<a class="btn btn-header btn-text pull-right" onclick="history.back()">Cancel</a>
+			<a class="btn btn-header btn-text pull-right" onclick="history.back()">{{'SETTINGS.CANCEL' | translate}}</a>
 		</div>
 	</div>
 	<div class="row expand">
