--- a/Journal/app/views/start/start.html
+++ b/Journal/app/views/start/start.html
@@ -9,14 +9,14 @@
 <div id="error-container" ng-show="t.showError" class="fullscreen error-container">
 	<div style="padding: 2em 4em; color: #eee;">
 		<div style="max-width: 500px; margin: 0 auto;">
-			<h2>No database connection</h2>
+			<h2>{{'START.NO_CONNECTION'|translate}}</h2>
 
-			<p class="description">Artivity was unable to connect to the local database. Please try to log out of your current desktop session to restart the service.</p>
+			<p class="description">{{'START.DESCRIPTION'|translate}}</p>
 
 
 			<p><small><label class="text-label">ERR_NO_APID_CONNECTION</label></small></p>
 
-			<p><a id="retry" class="btn btn-default" ng-click="t.retry()"><i class="zmdi zmdi-refresh-sync"></i> Retry</a></p>
+			<p><a id="retry" class="btn btn-default" ng-click="t.retry()"><i class="zmdi zmdi-refresh-sync"></i> {{'START.RETRY'|translate}}</a></p>
 		</div>
 	</div>
 </div>
