--- a/Journal/app/views/setup/setup.html
+++ b/Journal/app/views/setup/setup.html
@@ -25,7 +25,7 @@
                                 <uib-tab>
                                     <uib-tab-heading>
                                         <div style="padding: 0 15px">
-                                            <i class="zmdi zmdi-cloud-outline-alt"></i><label class="icn-label">{{'SETUP.TYPE_ONLINE | translate}}</label>
+                                            <i class="zmdi zmdi-cloud-outline-alt"></i><label class="icn-label">{{'SETUP.TYPE_ONLINE' | translate}}</label>
                                         </div>
                                     </uib-tab-heading>
                                     <arto-settings-user></arto-settings-user>
@@ -33,7 +33,7 @@
                                 <uib-tab>
                                     <uib-tab-heading>
                                         <div style="padding: 0 15px">
-                                            <i class="zmdi zmdi-desktop-windows"></i><label class="icn-label">{{'SETUP.TYPE_LOCAL | translate}}</label>
+                                            <i class="zmdi zmdi-desktop-windows"></i><label class="icn-label">{{'SETUP.TYPE_LOCAL' | translate}}</label>
                                         </div>
                                     </uib-tab-heading>
                                     <art-settings-user setup="true"></art-settings-user>
