Switched localization from angular-translate to angular-gettext.

--- a/Journal/app/views/file-view/file-view.html
+++ b/Journal/app/views/file-view/file-view.html
@@ -43,7 +43,7 @@
 			<div class="ui-resizable ui-pane ui-pane-right">
 				<div class="pane-content">
 					<ul class="nav nav-tabs nav-tabs-top tablist" id="tabs-right" role="tablist">
-						<li role="presentation" class="active"><a data-target="#statistics" role="tab" data-toggle="tab">{{'FILEVIEW.STATISTICS' | translate}}</a></li>
+						<li role="presentation" class="active"><a data-target="#statistics" role="tab" data-toggle="tab" translate>Statistics</a></li>
 					</ul>
 					<div class="tab-content padding-x-md padding-y-md">
 						<div role="tabpanel" class="tab-pane fade active in" id="statistics">
